Truncate really long issue titles.

--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ h2 {
   color: rgba(255, 255, 255, 0.91);
   font-size: 2em;
   letter-spacing: 3px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 h6 {
